...

<string name="logtag">SimplyDo</string>
<string name="restore_title">Restore Files</string>

<string name="deleteInactiveTitle">Delete Inactive?</string>
<string name="deleteInactiveMessage">Are you sure you want to delete all inactive items in this list?</string>
<string name="deleteInactivePositive">Yes</string>
<string name="deleteInactiveNegative">No</string>

<string name="moveToTitle">Move To</string>
<string name="moveToPositive">OK</string>
<string name="moveToNegative">Cancel</string>
<string name="moveToMoved">Item %1$s moved to %2$s</string>
...
<string name="itemEditNegative">Cancel</string>

<string name="listEditTitle">Edit List Label</string>
<string name="listEditPositive">OK</string>
<string name="listEditNegative">Cancel</string>

<string name="optionsMenuDeleteInactive">Delete All Inactive</string>
<string name="optionsMenuSettings">Settings</string>
<string name="optionsMenuSort">Sort Now</string>

<string name="itemOptionsTitle">Item Options</string>
<string name="itemOptionsEdit">Edit</string>
<string name="itemOptionsDelete">Delete</string>
...
<string name="itemOptionsMoveTo">Move To</string>

<string name="listOptionsTitle">List Options</string>
<string name="listOptionsEdit">Edit</string>
<string name="listOptionsDelete">Delete</string>

<string name="addItemButton">Add</string>
<string name="addItemHint">New Item Name</string>
<string name="addListButton">Add</string>
<string name="addListHint">New List Name</string>
    <string name="starswitcher">StarSwitcher</string>
	<string name="starimage">starImage</string>
	<string name="name">Name</string>
...
